--- a/main/flask/templates/main.html
+++ b/main/flask/templates/main.html
@@ -8,6 +8,12 @@
 
 <div class="content">
     <h1 style="text-align: center">Look for Claims</h1>
+    <form action="/" method="POST">
+        <input type="text" name="content" id="content">
+        <input type="submit" value="submit">
+        <input type="radio" name="mode" id="string" value="string"> <label for="string">string</label>
+        <input type="radio" name="mode" id="url" value="url" checked=true> <label for="url">url</label>
+    </form>
 
     <table >
         <tr>
@@ -17,17 +23,13 @@
         </tr>
         {% for elem in claims %}
         <tr>
-            <th>{{ elem[2] }}</th>
+            <th>{{ elem[1] }}</th>
+            <th>{{ elem[3] }}</th>
             <th>{{ elem[4] }}</th>
-            <th>{{ elem[5] }}</th>
         </tr>
         {% endfor %}
     </table>
-
-    <form action="/" method="POST">
-        <input type="text" name="content" id="content">
-        <input type="submit" value="Add Task">
-    </form>
+    
 </div>
 
 {% endblock %}
