show maintext in website

--- a/main/flask/templates/main.html
+++ b/main/flask/templates/main.html
@@ -15,6 +15,8 @@
         <input type="radio" name="mode" id="url" value="url" checked=true> <label for="url">url</label>
     </form>
 
+    <label style="text-align: center">{{ text[0][0] }}</label>     
+
     <table >
         <tr>
             <th>claim</th>
