change newsplease to trafilatura

--- a/main/flask/templates/main.html
+++ b/main/flask/templates/main.html
@@ -15,7 +15,7 @@
         <input type="radio" name="mode" id="url" value="url" checked=true> <label for="url">url</label>
     </form>
 
-    <label style="text-align: center">{{ text[0][0] }}</label>     
+    <label style="text-align: center">text</label>     
 
     <table >
         <tr>
