--- a/merge/templates/home.html
+++ b/merge/templates/home.html
@@ -9,10 +9,36 @@
 <div class="content">
     <h1>Input and Method</h1>
     <form action="/home" method="POST">
-        <input type="text" name="input" id="input">
-        <input type="submit" value="submit">
-        <input type="radio" name="mode" id="url" value="url" checked=true> <label for="url">url</label>
-        <input type="radio" name="mode" id="string" value="string"> <label for="string">string</label>
-        <input type="radio" name="mode" id="path" value="path"> <label for="path">path</label>
+        <textarea rows="15" cols="50" type="text" name="input" id="input"></textarea>
+        <input style="vertical-align: top;" type="submit" value="submit">
+        <input style="vertical-align: top;"type="button" name="clear" value="clear" onclick="eraseText();">
+        <input style="vertical-align: top;" type="radio" name="mode" id="url" value="url" checked=true> <label style="vertical-align: top;" for="url">url</label>
+        <input style="vertical-align: top;" type="radio" name="mode" id="tetx" value="text"> <label style="vertical-align: top;" for="text">text</label>
+        <input style="vertical-align: top;" type="radio" name="mode" id="file" value="file"> <label style="vertical-align: top;" for="file">file</label>
+        <input style="display: none;" type="file" id="my_file">
     </form>
+</div>
+<script>
+document.getElementById('file').onclick = function() {
+    document.getElementById('my_file').click();
+        var control = document.getElementById("my_file")
+        control.addEventListener("change", function(event){
+            var reader = new FileReader();      
+            reader.onload = function(event){
+                var contents = event.target.result;     
+                document.getElementById('input').value = contents;            
+            };
+            reader.onerror = function(event){
+                console.error("File could not be read! Code " + event.target.error.code);
+            };      
+            console.log("Filename: " + control.files[0].name);
+            reader.readAsText(control.files[0]);        
+        }, false);
+    };
+    function eraseText() {
+        document.getElementById("input").value = "";
+}
+
+    
+    </script>
 {% endblock %}
