--- a/merge/templates/vclaims.html
+++ b/merge/templates/vclaims.html
@@ -42,9 +42,9 @@
             </tr>
             {% for i in range(1,6) %}
             <tr class = "notfirst">
-                <td><a href="{{ result['overall'][i]['link'] }}" > {{ result['overall'][i]['vclaim'] }}</a></td>
-                <td><a style="font-weight: bold;"> {{ result['overall'][i]['sum_combined_score'] }}</a><br>
-                    <a>{{ result['overall'][i]['combined_score'] }} </a></td>
+                <td><a href="{{ result['overall'][i|string]['link'] }}" > {{ result['overall'][i|string]['vclaim'] }}</a></td>
+                <td><a style="font-weight: bold;"> {{ result['overall'][i|string]['sum_combined_score'] }}</a><br>
+                    <a>{{ result['overall'][i|string]['combined_score'] }} </a></td>
             </tr>
             {% endfor %}
         </table>
