--- a/merge/static/css/main.css
+++ b/merge/static/css/main.css
@@ -1,6 +1,6 @@
 body {
-    margin: 0;
-    padding: 0;
+    margin: 15px;
+    padding: 15px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #444;
   }
