--- a/merge/templates/vclaims.html
+++ b/merge/templates/vclaims.html
@@ -2,6 +2,9 @@
 
 {% block head %}
 <style>
+    body{
+        margin: 15px
+    }
     table {
         border-collapse: collapse;
         width: 100%;
